# MeowScript

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  index.meow  lib.js  makefile
.cargo/: config.toml
.github/: funding.yml
site/: README.md  package-lock.json  package.json
site/components/: Code.tsx  CodeDropdown.tsx  Features.tsx  Head.tsx
site/lib/: MeowScriptWorker.ts  create_meowscript_worker.ts  docs.md  example.ts  syntax.ts
site/pages/: _app.tsx  index.tsx
site/public/: meowscript.js  meowscript.wasm
src/: lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
src/ast/: mod.rs  token.rs
src/evaluation/: globals.rs  library.rs  mod.rs  object.rs  store.rs
src/std_library/: array.rs  fs.rs  math.rs  mod.rs  random.rs  string.rs  util.rs
