[package]
name = "meowscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
rand = "0.8.5"
lazy_static = "1.4.0"

[[bin]]
name = "meowscript"
path = "src/bin/main.rs"