[package]
name = "meowscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
rand = "0.8.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }

[[bin]]
name = "meowscript"
path = "src/main.rs"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
structopt = "0.3.23"
chrono = "0.4.19"
chrono-tz = "0.6.0"
